--- a/src/app/chats/components/contacts/contacts.component.scss
+++ b/src/app/chats/components/contacts/contacts.component.scss
@@ -38,6 +38,10 @@
 }
 
 .contact {
+  height: calc(100vh - 20rem);
+  overflow-x: scroll;
+  &::-webkit-scrollbar {width: 0 !important};
+
   &-container {
     width: 100%;
     height: 6rem;
@@ -46,6 +50,7 @@
     //background-color: #0a060e;
     background-color: #22142f;
     color: $color-gray-1;
+    margin-bottom: 1.5rem;
 
     display: flex;
   }
@@ -83,7 +88,6 @@
       }
     }
   }
-
 }
 
 .avatar-default {
@@ -143,7 +147,6 @@ input.search-user {
   border: 1px solid darken($color-secondary, 3%);
   border-radius: 1rem;
   margin-bottom: 2rem;
-  padding: 0 2rem;
 
   color: White;
   font-size: 1.2rem;
@@ -152,3 +155,10 @@ input.search-user {
     box-shadow: none;
   }
 }
+
+.chats-p {
+  text-transform: uppercase;
+  padding: 1rem 0 2rem 1rem ;
+
+}
+
