contacts page layout complete cont

--- a/src/app/chats/components/contacts/contacts.component.html
+++ b/src/app/chats/components/contacts/contacts.component.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="contact-content-message">
-        <p class="paragraph-default">Hey Paul, Whats up </p>
+        <p class="paragraph-default limit-text">Hey Paul, Whats up, lorem i wnated </p>
 
         <div class="contact-content-status">
           <svg
