--- a/src/app/chats/components/contacts/contacts.component.scss
+++ b/src/app/chats/components/contacts/contacts.component.scss
@@ -162,3 +162,11 @@ input.search-user {
 
 }
 
+.limit-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* number of lines to show */
+  line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
