--- a/src/app/chats/components/chat-board/chat-board.component.html
+++ b/src/app/chats/components/chat-board/chat-board.component.html
@@ -1,1 +1,37 @@
-<p>chat-board works!</p>
+<div class="chats-top-bar">
+  <div class="chat-profile-container">
+    <div class="chat-profile-image">
+      <img
+        src="https://static.remove.bg/remove-bg-web/c05ac62d076574fad1fbc81404cd6083e9a4152b/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg"
+        alt="contact img"
+        class="avatar-default avatar-default--contacts">
+      <div class="status-badge status-badge--online">
+      </div>
+    </div>
+    <div class="chat-profile-name">
+      <p class="heading-default heading-default--black ">Mathew </p>
+      <p class="paragraph-default limit-text">Down for a good time</p>
+    </div>
+  </div>
+
+  <div class="chat-profile-setting dropup-center dropup">
+    <svg class="dropdown-toggle" type="button" data-bs-toggle="dropdown" data-bs-offset="0,14" aria-expanded="false" xmlns="http://www.w3.org/2000/svg" width="192" height="192" fill="#000000" viewBox="0 0 256 256">
+      <rect width="256" height="256" fill="none"></rect>
+      <circle cx="128" cy="128" r="12"></circle>
+      <circle cx="192" cy="128" r="12"></circle>
+      <circle cx="64" cy="128" r="12"></circle>
+    </svg>
+
+    <ul class="dropdown-menu" aria-labelledby="defaultDropdown">
+      <li><a class="dropdown-item" href="#">
+        Contact info
+      </a></li>
+      <li><a class="dropdown-item" href="#">
+        Close chat
+      </a></li>
+      <li><a class="dropdown-item" href="#">
+        Clear messages
+      </a></li>
+    </ul>
+  </div>
+</div>
