--- a/src/app/chats/components/contacts/contacts.component.scss
+++ b/src/app/chats/components/contacts/contacts.component.scss
@@ -1,5 +1,7 @@
 @import "colors";
-
+.side-menu {
+  padding: 3rem 1rem;
+}
 .profile {
   &-tab-container {
     position: absolute;
@@ -106,35 +108,6 @@
   }
 }
 
-p.heading-default {
-  color: white;
-  font-size: 1.5rem;
-}
-
-p.paragraph-default {
-  color: $color-gray-1;
-  font-size: 1.2rem;
-}
-
-.status-badge {
-  position: absolute;
-  top: 75%;
-  left: 80%;
-
-  width: 1rem;
-  height: 1rem;
-  border: 0.5px solid $color-gray-1;
-  border-radius: 50%;
-
-  &--online {
-    background-color: green;
-  }
-
-  &--offline {
-    background-color: red;
-  }
-}
-
 input:focus {
   outline: none;
 }
@@ -156,17 +129,3 @@ input.search-user {
   }
 }
 
-.chats-p {
-  text-transform: uppercase;
-  padding: 1rem 0 2rem 1rem ;
-
-}
-
-.limit-text {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 1; /* number of lines to show */
-  line-clamp: 1;
-  -webkit-box-orient: vertical;
-}
