chats footer setup

--- a/src/app/chats/components/chat-board/chat-board.component.scss
+++ b/src/app/chats/components/chat-board/chat-board.component.scss
@@ -1,4 +1,5 @@
 @import "colors";
+@import '~@ctrl/ngx-emoji-mart/picker';
 .chats-top-bar{
   background-color: white;
   //border-bottom: 1px solid $color-gray-1;
@@ -122,3 +123,35 @@ ul.show {
   }
 }
 
+.chat__footer {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+}
+
+.chat__footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 2rem;
+}
+
+
+textarea.send-message {
+  padding: 1rem;
+  width: 100%;
+  height: 4.5rem;
+  border: 1px solid darken($color-secondary, 3%);
+  border-radius: 1rem;
+  font-size: 1.2rem;
+  margin: 0 1rem;
+
+  &:focus {
+    box-shadow: none;
+  }
+}
+
+.send-icon {
+  width: 2rem;
+  height: 2rem;
+}
