--- a/src/app/chats/components/chat-board/chat-board.component.scss
+++ b/src/app/chats/components/chat-board/chat-board.component.scss
@@ -1,5 +1,7 @@
 @import "colors";
 @import '~@ctrl/ngx-emoji-mart/picker';
+@import 'mixins';
+
 .chats-top-bar{
   background-color: white;
   //border-bottom: 1px solid $color-gray-1;
@@ -142,8 +144,9 @@ textarea.send-message {
   padding: 1rem;
   width: 100%;
   height: 4.5rem;
-  border: 1px solid darken($color-gray-1, 3%);
-  border-radius: 1rem;
+  //border: 1px solid darken($color-gray-1, 3%);
+  //border-radius: 1rem;
+  border:none;
   font-size: 1.2rem;
   margin: 0 1rem;
 
