--- a/src/app/chats/components/contacts/contacts.component.html
+++ b/src/app/chats/components/contacts/contacts.component.html
@@ -56,4 +56,19 @@
 
   </div>
 
+  <div class="collapse__btn">
+    <div class="collapse__btn-open" *ngIf="isSideOpen" >
+      <svg (click)="toggleSide()" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="collapse__btn__svg w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 4.5l7.5 7.5-7.5 7.5m-6-15l7.5 7.5-7.5 7.5" />
+      </svg>
+    </div>
+
+    <div class="collapse__btn-close" *ngIf="!isSideOpen">
+      <svg (click)="toggleSide()" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 collapse__btn__svg">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M18.75 19.5l-7.5-7.5 7.5-7.5m-6 15L5.25 12l7.5-7.5" />
+      </svg>
+
+    </div>
+
+  </div>
 </div>
