--- a/src/app/chats/chats.component.scss
+++ b/src/app/chats/chats.component.scss
@@ -19,6 +19,7 @@
   width: calc(100vw - 30rem);
   height: 100vh;
   background-color: lighten(gray, 75%);
+  display: flex;
 
   @include respond(phone) {
     width: 100%;
@@ -75,7 +76,7 @@
 
 .back__to__nav {
   position: absolute;
-  top: 3%;
+  top: 2.5rem;
   left: 2%;
   &__svg {
     width: 2.5rem ;
